<resources>
    <string name="app_name">Inventory Manager</string>

    <string name="empty_inventory_list">There are no items in inventory.\n Please click add button to get started.</string>

    <string name="editor_activity_title_new_item">Add Inventory Item</string>

    <string name="editor_activity_title_edit_item">Update Item</string>

    <string name="category_overview">Overview</string>

    <string name="item_name">Item Name</string>

    <string name="complete_all_entries_message">You must fill in all attributes to create inventory.</string>

    <string name="name_missing_message">Inventory items must have a name.</string>

    <string name="item_price">Price</string>

    <string name="item_qty">Quantity</string>

    <string name="item_image">Image URL</string>

    <string name="item_qty_on_order">Quantity On Order</string>

    <string name="delete_dialog_msg">Delete this inventory item?</string>

    <string name="action_save">Save</string>

    <string name="action_delete">Delete</string>

    <string name="delete">Delete</string>

    <string name="cancel">Cancel</string>

    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <string name="discard">Discard</string>

    <string name="keep_editing">Keep Editing</string>

    <string name="sell_item">Sell Item</string>

    <string name="sell">Sell</string>

    <string name="sell_qty_message">You must enter a quantity to sell.</string>

    <string name="sell_error_message">Error selling item.</string>

    <string name="sell_qty_too_high_message">You cannot sell more inventory than the current quantity.</string>

    <string name="receive_item">Receive Item</string>

    <string name="receive">Receive</string>

    <string name="receive_qty_message">You must enter a quantity to receive.</string>

    <string name="receive_error_message">Error receiving item.</string>

    <string name="save_error_message">Error saving item.</string>

    <string name="save_success_message">Inventory Item saved with row id: </string>

    <string name="update_error_message">Error updating item.</string>

    <string name="update_success_message">Inventory Item updated.</string>

    <string name="delete_error_message">Error deleting item.</string>

    <string name="delete_success_message">Inventory Item deleted</string>

    <string name="order_item">Order Item</string>

    <string name="order">Order</string>

    <string name="order_qty_message">You must enter a quantity to order.</string>

    <string name="order_error_message">Error ordering item.</string>

</resources>
